--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,5 +15,18 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
+    <string-array name="Topic">
+        <item>Психологический детокс</item>
+        <item>Энергетическая защита</item>
+        <item>Психологическая защита</item>
+        <item>Информационная защита</item>
+        <item>Медитации</item>
 
+    </string-array>
+
+    <string-array name="Chapter">
+        <item>Lo - бесплатный</item>
+        <item>Med - платный</item>
+        <item>Hi - совсем платный</item>
+    </string-array>
 </resources>
